# bdla

./: CMakeLists.txt
include/bdla/: libbdla.h
src/: blasMxf.c  blasVxf.c  gauss_seidel.c  linsolve_jacobi.c  linsovle_gauss_seidel.c  nanimpl.h
test/: CMakeLists.txt  test_blasMxf.h  test_blasVxf.h  test_gauss_seidel.h  test_jacobi.h  testmain.c
tool/natvis/: bdla_natvis.natvis
